5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1723_2508.log
== TEST (2019-05-16 08:57:41) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((i+1)*(i+2)*(i+3))
	
	print(soma)
-- OUTPUT:
0.16666666666666666
0.3333333333333333
0.5
0.6666666666666666
0.8333333333333333
0.9999999999999999
1.1666666666666665
1.3333333333333333
1.5
1.6666666666666667
1.8333333333333335
2.0
2.1666666666666665
2.333333333333333
2.4999999999999996
2.666666666666666
2.8333333333333326
2.999999999999999
3.1666666666666656
3.333333333333332
3.4999999999999987
3.666666666666665
3.8333333333333317
3.9999999999999982
4.166666666666665
4.333333333333332
4.499999999999999
4.666666666666666
4.833333333333333
5.0
5.166666666666667
5.333333333333334
5.500000000000001
5.666666666666668
5.833333333333335
6.000000000000002
6.166666666666669
6.333333333333336
6.500000000000003
6.66666666666667
6.833333333333337
7.0000000000000036
7.1666666666666705
7.3333333333333375
7.500000000000004
7.666666666666671
7.833333333333338
8.000000000000005
8.166666666666671
8.333333333333337
8.500000000000004
8.66666666666667
8.833333333333336
9.000000000000002
9.166666666666668
9.333333333333334
9.5
9.666666666666666
9.833333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:00:32) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((i+1)*(i+2)*(i+3))*4
	
	print(soma)
-- OUTPUT:
0.6666666666666666
1.3333333333333333
2.0
2.6666666666666665
3.333333333333333
3.9999999999999996
4.666666666666666
5.333333333333333
6.0
6.666666666666667
7.333333333333334
8.0
8.666666666666666
9.333333333333332
9.999999999999998
10.666666666666664
11.33333333333333
11.999999999999996
12.666666666666663
13.333333333333329
13.999999999999995
14.66666666666666
15.333333333333327
15.999999999999993
16.66666666666666
17.33333333333333
17.999999999999996
18.666666666666664
19.333333333333332
20.0
20.666666666666668
21.333333333333336
22.000000000000004
22.66666666666667
23.33333333333334
24.000000000000007
24.666666666666675
25.333333333333343
26.00000000000001
26.66666666666668
27.333333333333346
28.000000000000014
28.666666666666682
29.33333333333335
30.000000000000018
30.666666666666686
31.333333333333353
32.00000000000002
32.666666666666686
33.33333333333335
34.000000000000014
34.66666666666668
35.33333333333334
36.00000000000001
36.66666666666667
37.333333333333336
38.0
38.6666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:08:45) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+1)
	i = i + 1
	
	print(soma)
-- OUTPUT:
1.0
0.6666666666666667
0.8666666666666667
0.7238095238095239
0.8349206349206351
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:09:49) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/2*+2(2*i+1)
	i = i + 1
	
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/2*+2(2*i+1)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:10:08) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*+2(2*i+1))
	i = i + 1
	
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/(2*+2(2*i+1))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:10:11) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*+2(2*i+1))
	i = i + 1
	
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/(2*+2(2*i+1))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:10:29) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*+2(2*i+1))
	i = i + 1
	
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/(2*+2(2*i+1))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:11:20) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*+2(2*i+1))
	i = i + 1
	
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/(2*+2(2*i+1))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:11:54) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+2(2*i+1))
	i = i + 1
	
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/(2*i+2(2*i+1))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:12:13) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+2*(2*i+1))
	i = i + 1
	
	print(soma)
-- OUTPUT:
0.5
0.375
0.4464285714285714
0.3964285714285714
0.4348901098901099
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:12:43) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((2*i+2)*(2*i+1))
	i = i + 1
	
	print(soma)
-- OUTPUT:
0.5
0.4166666666666667
0.45
0.43214285714285716
0.4432539682539683
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:13:55) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((2*i+2)*(2*i+1)*(2*i+4))
	i = i + 1
	
	print(soma)
-- OUTPUT:
0.125
0.1111111111111111
0.11527777777777777
0.11349206349206349
0.11441798941798942
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:14:40) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((2*i+2)*(2*i+1)*(2*i+2))
	i = i + 1
	
	print(soma)
-- OUTPUT:
0.25
0.22916666666666666
0.23472222222222222
0.23249007936507937
0.2336011904761905
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:15:03) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((2*i)*(2*i+1)*(2*i))
	i = i + 1
	
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/((2*i)*(2*i+1)*(2*i))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:16:23) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((i+2)*(2*i+1)*(2+i))
	i = i + 1
	
	print(soma)
-- OUTPUT:
0.25
0.21296296296296297
0.22546296296296298
0.21974867724867725
0.22283509700176368
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:16:59) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+1)*(2+i)
	i = i + 1
	
	print(soma)
-- OUTPUT:
2.0
1.0
1.8
1.0857142857142859
1.7523809523809524
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:17:27) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+1)*(2+i)
	i = i + 1
	
	print(soma)
-- OUTPUT:
2.0
1.0
1.8
1.0857142857142859
1.7523809523809524
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:18:48) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+1)*(2+i)
	i = i + 1
	
	print(round(soma,8)
-- EXECUTION TIME:
0.152152
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:18:57) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+1)*(2+i)
	i = i + 1
	
	print(round(soma,8)
-- ERROR:
File "XXXX", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:19:08) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+1)*(2+i)
	i = i + 1
	
	print(round(soma,8))
-- OUTPUT:
2.0
1.0
1.8
1.08571429
1.75238095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:19:42) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/i*(2*i+1)*(2+i)
	i = i + 1
	
	print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/i*(2*i+1)*(2+i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:20:09) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(i*(2*i+1)*(2+i))
	i = i + 1
	
	print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/(i*(2*i+1)*(2+i))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:20:36) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((2*i+1)*(2+i)*i)
	i = i + 1
	
	print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (-1)**i/((2*i+1)*(2+i)*i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:20:46) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/((2*i+1)*(2+i)*1)
	i = i + 1
	
	print(round(soma,8))
-- OUTPUT:
0.5
0.38888889
0.43888889
0.41031746
0.42883598
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:21:12) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1

while (i<=fim):
	soma = soma + (-1)**i/(2*i+1)*(2+i)
	i = i + 1
	
	print(round(soma,8))
-- OUTPUT:
2.0
1.0
1.8
1.08571429
1.75238095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:23:25) 
-- CODE:
n = int(input(""))

soma=0
i=0
fim = n-1
a = 4 

while (i<=fim):
	soma = soma + (-1)**i/(2+i)*(2*i+1)*a
	i = i + 1
	a = a + 2
	
	print(round(soma,8))
-- OUTPUT:
2.0
-4.0
6.0
-8.0
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:24:04) 
-- CODE:
n = int(input(""))

soma=1
i=0
fim = n-1
a = 4 

while (i<=fim):
	soma = soma + (-1)**i/(2+i)*(2*i+1)*a
	i = i + 1
	a = a + 2
	
	print(round(soma,8))
-- OUTPUT:
3.0
-3.0
7.0
-7.0
11.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:24:12) 
-- CODE:
n = int(input(""))

soma=1
i=0
fim = n-1
a = 4 

while (i<=fim):
	soma = soma + (-1)**i/(2+i)*(2*i+1)*a
	i = i + 1
	a = a + 2
	
	print(round(soma,8))
-- EXECUTION TIME:
0.160718
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.0
-3.0
7.0
-7.0
11.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.0
-3.0
7.0
-7.0
11.0
-11.0
15.0
-15.0
19.0
-19.0
23.0
-23.0
27.0
-27.0
31.0
-31.0
35.0
-35.0
39.0
-39.0
43.0
-43.0
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.0
-3.0
7.0
-7.0
11.0
-11.0
15.0
-15.0
19.0
-19.0
23.0
-23.0
27.0
-27.0
31.0
-31.0
35.0
-35.0
39.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:24:23) 
-- CODE:
n = int(input(""))

soma=1
i=0
fim = n-1
a = 4 

while (i<=fim):
	soma = soma + (-1)**i/(2+i)*(2*i+1)*a
	i = i + 1
	a = a + 2
	
	print(round(soma,8))
-- OUTPUT:
3.0
-3.0
7.0
-7.0
11.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:25:04) 
-- CODE:
n = int(input(""))

soma=1
i=0
fim = n-1
a = 4 

while (i<=fim):
	soma = soma + (-1)**i/(2+i)*(2*i+1)*a
	i = i + 1
	a = a + 2
	
	print(round(soma,8))
-- OUTPUT:
3.0
-3.0
7.0
-7.0
11.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:25:15) 
-- CODE:
n = int(input(""))

soma=1
i=0
fim = n-1
a = 4 

while (i<=fim):
	soma = soma + (-1)**i/(2+i)*(2*i+1)*a
	i = i + 1
	a = a + 2
	
print(round(soma,8))
-- OUTPUT:
11.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:26:09) 
-- CODE:
n = int(input(""))

soma=1
i=0
fim = n-1
 

while (i<=fim):
	soma = soma + (-1)**i/(2+i)*(2*i+1)
	i = i + 1
	
	
print(round(soma,8))
-- OUTPUT:
1.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
